added model building with UI improvments